# dflash_2

./: .gitignore  README.md  TODO.md  experiments.md  main.py  method.md  pyproject.toml  related_methods.md
experiments/debug/: README.md  run.sh
experiments/dflash-test/: run.sh
experiments/q34b_bug_fix/: README.md  run.sh
experiments/q3_4b_exp_1/: run.sh
experiments/qwen3_4b_bs16_diffusion_3L/: README.md  run.sh
experiments/qwen3_4b_bs16_standard_3L/: README.md  run.sh
experiments/qwen3_4b_tree_pos_bias/: README.md  run.sh
experiments/qwen3_4b_tree_pos_bias_and_loss_weighting/: README.md  run.sh
experiments/qwen3_4b_tree_q_head/: README.md  run.sh
experiments/qwen_3_0_6b_every_branch/: run.sh
experiments/qwen_3_4b_every_branch/: README.md  run.sh
experiments/tree-dev/: README.md  run.sh
experiments/tree-dev-compile/: README.md  run.sh
recorded_outputs/: drafting_times.csv  interactive_verifier_plot.ipynb  verification_times.csv
src/: trainer.py  util.py
src/data/: data_module.py  eval_data.py  generate_synthetic_data.py
src/misc/: naive_generate_times.py  verification_times.py
src/models/: arp.py  dflash.py  qwen3.py
src/trees/: __init__.py  block_tree.py  every_branch_tree.py  fixed_tree.py  fixed_tree_prunable.py  fixed_tree_v2.py
tests/: test_every_branch_hdf5.py
