[project]
name = "dflash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.7.0",
    "jsonargparse[signatures]>=4.47.0",
    "jupyter>=1.1.1",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "wandb>=0.25.1",
]
